# quant_strategy_v2

./: .env  .env.example  .gitignore  README.md  _bootstrap.py  env_activate.ps1  environment.yml  latest_strategy_positions.csv  pyproject.toml  pytest.ini
data/: .gitkeep  ah_codes.csv  data.duckdb  prices.parquet
doc/data/: ah_codes.md  data.duckdb.md  data.sqlite.md  data_processed.md  tushare_sync_basic.md  tushare_sync_daily.md
doc/data_fetcher/: tushare_sync_basic.md  tushare_sync_daily.md
logs/: qs_etf_backfill_all.snapshot.txt
notebooks/: _bootstrap.py  ah_premium_explorer.ipynb  ah_premium_new.ipynb  ah_premium_quarterly_bt.ipynb  ah_premium_view.ipynb  duckdb_test.ipynb  etf_all_time_strategy.ipynb  etf_min_premium_strategy.ipynb  etf_premium_view.ipynb  low_pe_new.ipynb  low_pe_strategy.ipynb  secret_test.ipynb
refer/: get_9_AH_premium.ipynb  show_AH_premium.ipynb
scripts/: _bootstrap.py  ah_premium_quarterly_bt.py  backfill_etf_history.sh  backtest.py  db_dedupe.py  fetch_data.py  fetch_data.sh  fetch_data_auto.sh  fetch_data_once.sh  ignored_buzz_ah_research.py  ignored_crowded_ah_engine_bt.py  query_fx_range.py  show_a_stock_head.py  show_pe_latest.py  simple_strategy_2_test.py  simple_strategy_test.py  web_refresh_snapshots.py  web_run.py
test/: test_broker_fees.py  test_core.py  test_engine.py  test_engine_hooks.py  test_etf_equal_weight_annual.py  test_market_data_context.py  test_runner_calendar.py  test_runner_defaults.py  test_sqlite_utils_dedupe.py  test_web_app.py  test_web_composer.py  test_web_repo.py  test_web_snapshot_service.py
(+54 files in other folders)
