[tool.poetry]
name = "quant-strategy-v2"
version = "0.1.0"
description = ""
authors = ["Raytto <306483372@qq.com>"]
readme = "README.md"
packages = [
    { include = "qs", from = "src" },
    { include = "data_fetcher", from = "src" },
    { include = "data_processor", from = "src" },
    { include = "strategy", from = "src" },
]
# optional: if you later publish to PyPI
# license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
tushare = "^1.4.21"
duckdb = "^1.3.2"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
matplotlib = "^3.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
